did some image debugging and fixed clipping

--- a/css/products.css
+++ b/css/products.css
@@ -4,42 +4,45 @@ html {
 
 body {
     display: grid;
-
 }
+
 img {
-    width: 100%;
+    width: 30vw;
     height: 100%;
     object-fit: cover;
+    min-width: 180px;
 }
+
 header {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     align-items: center;
     justify-items: center;
 }
+
 main>section {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr ));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     align-items: center;
     justify-items: center;
     background-color: rgba(255, 221, 180, 0.63);
     border-radius: 20px;
 }
-.imagecropper {
-    height: 250px;
-    width: 400px;
-    overflow: hidden;
-    position: relative;
-    border-radius: 20px;
 
+.imagecropper {
+    height: 200px;
+    width: 275px;
+    border-radius: 1vmin;
 }
+
 #price {
     font-weight: bolder;
     font-style: oblique;
 }
+
 footer {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr ));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     align-items: center;
     justify-items: center;
 }
