--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,13 @@ html {
 
 body {
     display: grid;
-
 }
 
 img {
-    width: 100%;
+    width: 30vw;
     height: 100%;
+    min-width: 180px;
     object-fit: cover;
-  
 }
 
 header {
@@ -23,17 +22,16 @@ header {
 
 main>section {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr ));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     align-items: center;
     justify-items: center;
     background-color: rgba(255, 221, 180, 0.63);
     border-radius: 20px;
-   
 }
 
 footer {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr ));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     align-items: center;
     justify-items: center;
 }
@@ -44,10 +42,6 @@ footer {
 }
 
 .imagecropper {
-    height: 250px;
-    width: 400px;
-    overflow: hidden;
-    position: relative;
-    border-radius: 20px;
-
+    height: 200px;
+    width: 275px;
 }
